2015-05-15  Alfonso Ariza - takeover from INETMANET

	Bugfix: erronous behaviour in Ieee802.11 mac (do not change 
	backoff if the retry couter is 0)

2013-01-30  ------ inet-2.1.0 released ------

2012-08-28  Zoltan Bojthe

	- Better parameter processing: error is thrown if an undefined value 
	  is specified in opmode or autoBitrate
	- Refactored how WifiModulationType::getMode80211a/b/g/p()
	  is used. 
	- Added the Ieee80211Descriptor class to assign modulation speed
	  and type for the different opModes.

	Bugfix: Bitrate for opMode 'p' was incorrectly set.

2012-08-07  ------ inet-2.0.0 released ------

2012-06-25  ------ inet-1.99.5 released ------

2012-03-20  ------ inet-1.99.4 released ------

2012-02-24  ------ inet-1.99.3 released ------

2012-02-11  Rudolf Hornig

	Takeover from INETMANET @ fff5dfd

	Added support to use the modulation parameters to determine
	slot, diffs and ack timeout. Set the useModulationParameters parameter
	for the MAC module.

	Added support to prioritize multicast frames. Set the
	prioritizeMulticast parameter for the MAC module.

	Added duplicate frame detection (turned on by default). Use
	duplicateDetectionFilter, purgeOldTuples and duplicateTimeOut
	parameters.

2011-12-22  Andras Varga

	EtherMAC: statistics titles changed to lower case; cosmetics

2011-11-18  ------ INET-1.99.2 released ------

2011-11-10  Andras Varga

	bug #398: Broadcast packets need to use the basic bitrate [ZBojthe]

	For 802.11s, the bit rate to send multicast frames is the minimum
	defined in the standard (1 Mbit/s).

2011-07-20  Levente Meszaros

	Renamed lowergateIn to lowerLayerIn and lowergateOut to lowerLayerOut.

2011-07-20  Levente Meszaros

	Renamed uppergateIn to upperLayerIn and uppergateOut to upperLayerOut.

2011-08-03  Zoltan Bojthe

	ieee80211NewMac: bugfix

2011-07-19  Andras Varga

	cPolymorphic -> cObject (cPolymorphic became cObject in OMNeT++ 4.0)

2011-07-19  Levente Meszaros

	Fix uninitialized variable.
